<resources>
    <string name="app_name">University Bazaar</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="street">Street:</string>
    <string name="city">City:</string>
    <string name="state">State:</string>
    <string name="zip">ZIP Code:</string>
    <string name="view_profile">View Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>

    <string name="item_owner">Item Owner: </string>
    <string name="item_name">Item Name: </string>
    <string name="description">Description: </string>
    <string name="post_date">Post Date: </string>
    <string name="item_category">Category: </string>
    <string name="offer_type">Offer Type: </string>
    <string name="buy_item">Buy / Exchange</string>
    <string name="exchange">Exchange</string>
    <string name="club_name">Club Name</string>
    <string name="select_club_type">Select Club Type:</string>
    <string name="sports">Sports</string>
    <string name="academics">Academics</string>
    <string name="music">Music</string>
    <string name="club_description">Club Description</string>
    <string name="create_club">Create Club</string>


</resources>