<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".controller.CreateClubFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/etClubName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/club_name"
            android:padding="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/select_club_type" />

        <RadioGroup
            android:id="@+id/rgClubType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checkedButton="@id/rbCommunity"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbSports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sports" />

            <RadioButton
                android:id="@+id/rbAcademics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/academics" />

            <RadioButton
                android:id="@+id/rbMusic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/music" />

            <RadioButton
                android:id="@+id/rbCommunity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Community" />

        </RadioGroup>

        <EditText
            android:id="@+id/etClubDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/edittext_border"
            android:gravity="top"
            android:hint="@string/club_description"
            android:inputType="textMultiLine"
            android:lines="10"
            android:padding="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="Club Members Capacity: " />

        <EditText
            android:id="@+id/etClubMembersCapacity"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/edittext_border"
            android:gravity="center"
            android:inputType="number"
            android:padding="5dp" />

        <Button
            android:id="@+id/btnCreateClub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/create_club" />

    </LinearLayout>

</ScrollView>