<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_profile_background"
    android:layout_margin="10dp"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/username"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUsernameDbVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/tvUsername"
        android:layout_toRightOf="@id/tvUsername"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsername"
        android:layout_margin="10dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPasswordDbVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUsername"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/tvPassword"
        android:layout_toRightOf="@id/tvPassword"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPassword"
        android:layout_margin="10dp"
        android:text="@string/first_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFNameDbVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPassword"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/tvFirstName"
        android:layout_toRightOf="@id/tvFirstName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFirstName"
        android:layout_margin="10dp"
        android:text="@string/last_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLNameDbVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFirstName"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/tvLastName"
        android:layout_toRightOf="@id/tvLastName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLastName"
        android:layout_margin="10dp"
        android:text="@string/phone"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPhoneDbVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLastName"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/tvPhone"
        android:layout_toRightOf="@id/tvPhone"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPhone"
        android:layout_margin="10dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvLEmailDbVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPhone"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/tvEmail"
        android:layout_toRightOf="@id/tvEmail"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmail"
        android:layout_margin="10dp"
        android:text="@string/street"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvStreetDbVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEmail"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/tvStreet"
        android:layout_toRightOf="@id/tvStreet"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvStreet"
        android:layout_margin="10dp"
        android:text="@string/city"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCityDbVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvStreet"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/tvCity"
        android:layout_toRightOf="@id/tvCity"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCity"
        android:layout_margin="10dp"
        android:text="@string/state"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvStateDbVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCity"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/tvState"
        android:layout_toRightOf="@id/tvState"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvZip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvState"
        android:layout_margin="10dp"
        android:text="@string/zip"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvZipDbVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvState"
        android:layout_margin="10dp"
        android:layout_toEndOf="@id/tvZip"
        android:layout_toRightOf="@id/tvZip"
        android:textSize="20sp" />

</RelativeLayout>