<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="40"
            android:text="@string/username"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/tvUsernameVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="60"
            android:textSize="20sp"
            android:background="@drawable/edittext_border"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="40"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/etPasswordVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="60"
            android:background="@drawable/edittext_border"
            android:textSize="20sp"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPassword"
            android:layout_margin="10dp"
            android:layout_weight="40"
            android:text="@string/first_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/etFNameVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="60"
            android:background="@drawable/edittext_border"
            android:textSize="20sp"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="40"
            android:text="@string/last_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/etLNameVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="60"
            android:background="@drawable/edittext_border"
            android:textSize="20sp"
            android:padding="5dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLastName"
            android:layout_margin="10dp"
            android:layout_weight="40"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/etPhoneVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="60"
            android:background="@drawable/edittext_border"
            android:inputType="phone"
            android:textSize="20sp"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPhone"
            android:layout_margin="10dp"
            android:layout_weight="40"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/etLEmailVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="60"
            android:background="@drawable/edittext_border"
            android:textSize="20sp"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvStreet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmail"
            android:layout_margin="10dp"
            android:layout_weight="40"
            android:text="@string/street"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/etStreetVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="60"
            android:background="@drawable/edittext_border"
            android:textSize="20sp"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvStreet"
            android:layout_margin="10dp"
            android:layout_weight="40"
            android:text="@string/city"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/etCityVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="60"
            android:background="@drawable/edittext_border"
            android:textSize="20sp"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvState"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCity"
            android:layout_margin="10dp"
            android:layout_weight="40"
            android:text="@string/state"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/etStateVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="60"
            android:background="@drawable/edittext_border"
            android:textSize="20sp"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:padding="5dp">

        <TextView
            android:id="@+id/tvZip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="40"
            android:text="@string/zip"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/etZipVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="60"
            android:background="@drawable/edittext_border"
            android:textSize="20sp"
            android:padding="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:text="@string/save_profile" />

    </LinearLayout>

</ScrollView>